Let's hope this is enough

--- a/wbwcrm-frontend-js/src/components/contact/contact.css
+++ b/wbwcrm-frontend-js/src/components/contact/contact.css
@@ -39,3 +39,11 @@ label {
 #multi_select{
   max-width: 10em;
 }
+
+.show_h2_div{
+  margin-left: 100px;
+}
+
+#new_errors{
+  margin-left: 10px;
+}
