--- a/wbwcrm-frontend-js/src/App.css
+++ b/wbwcrm-frontend-js/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -13,19 +11,21 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app_header {
+  position: relative;
+  background-color: blue;
+  min-height: 50px;
+  margin-left: 0%;
 }
 
-.App-link {
-  color: #61dafb;
+.app_header > h3{
+  display: inline-block;
+  margin-left: 40px;
+}
+
+a {
+  text-decoration: none !important;
+  color: blanchedalmond;
 }
 
 @keyframes App-logo-spin {
